Click on modal scrollbar no longer closes modal (#785)
* - Fix typo.
- Click on scrollbars in modal was registered as click outside and closed the modal.
- Scrollbars in modal caused the side of the modal to lose round corners.

* - Remove console log.

--- a/packages/modal/src/dialog/modal/ModalDialog.module.css
+++ b/packages/modal/src/dialog/modal/ModalDialog.module.css
@@ -10,6 +10,17 @@
 
   @media (min-width: 769px) {
     border-radius: var(--swui-border-radius-large);
+
+    &::-webkit-scrollbar-thumb {
+      background-color: var(--lhds-color-ui-400);
+      border: 4px solid transparent;
+      border-radius: 8px;
+      background-clip: padding-box;
+    }
+
+    &::-webkit-scrollbar {
+      width: 16px;
+    }
   }
 
   &:not([open]) {
